fix: edit a bug where a burger is hidden under a Hero block feat: when the mobile menu is open, page scrolling is blocked and the page becomes greyed out

--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -1,7 +1,8 @@
 .hero__swiper-slide {
   position: relative;
 
-  max-width: fill-available;
+  max-width: -moz-available;
+  max-width: -webkit-fill-available;
   min-height: 423.8px;
   padding: 144.5px 0 0 40px;
 
@@ -16,7 +17,7 @@
     padding-bottom: 3px;
   }
 
-  @media (min-width: $tablet-width) {
+  @media(min-width: $tablet-width) {
     min-height: 692px;
     padding: 342px 0 0 45px;
 
@@ -30,7 +31,7 @@
     }
   }
 
-  @media (min-width: $desktop-width) {
+  @media(min-width: $desktop-width) {
     min-height: 520px;
     padding: 200px 120px 80px;
   }
@@ -38,7 +39,7 @@
 
 .hero__background {
   position: absolute;
-  z-index: -2;
+  z-index: -1;
   top: 0;
   left: 0;
 
@@ -71,18 +72,18 @@
 
   color: $color-default-white;
 
-  @media (min-width: $tablet-width) {
+  @media(min-width: $tablet-width) {
     padding-right: 45px;
   }
 
-  @media (min-width: $desktop-width) {
+  @media(min-width: $desktop-width) {
     display: block;
     align-items: normal;
 
     padding: 0;
   }
 
-  h1 {
+  h2 {
     font-size: $font-line-size-hippo;
     font-weight: $extra-bold;
     line-height: $font-line-size-hippo;
@@ -93,7 +94,7 @@
 
     text-align: center;
 
-    @media (min-width: $tablet-width) {
+    @media(min-width: $tablet-width) {
       font-size: $font-line-size-blue-whale;
       line-height: $font-line-size-blue-whale;
 
@@ -101,7 +102,7 @@
       margin-bottom: 13px;
     }
 
-    @media (min-width: $desktop-width) {
+    @media(min-width: $desktop-width) {
       font-size: $font-line-size-moon;
       line-height: $font-line-size-moon;
 
@@ -123,7 +124,7 @@
 
     text-align: center;
 
-    @media (min-width: $tablet-width) {
+    @media(min-width: $tablet-width) {
       font-size: $font-line-size-dog;
       line-height: $font-line-size-lion;
 
@@ -131,7 +132,7 @@
       margin-bottom: 37px;
     }
 
-    @media (min-width: $desktop-width) {
+    @media(min-width: $desktop-width) {
       max-width: 420px;
       margin-bottom: 37px;
 
@@ -160,7 +161,7 @@
   width: 140px;
   padding: 21px 20px 19px;
 
-  @media (min-width: $tablet-width) {
+  @media(min-width: $tablet-width) {
     padding: 20px;
   }
 }
@@ -176,7 +177,7 @@
 .hero__description-item {
   display: none;
 
-  @media (min-width: $desktop-width) {
+  @media(min-width: $desktop-width) {
     font-size: $font-line-size-mouse;
     font-weight: $regular;
     line-height: $font-line-size-fox;
@@ -229,11 +230,11 @@
 
   gap: 12px;
 
-  @media (min-width: $tablet-width) {
+  @media(min-width: $tablet-width) {
     bottom: 40px;
   }
 
-  @media (min-width: $desktop-width) {
+  @media(min-width: $desktop-width) {
     bottom: 92px;
     left: 1216px;
 
@@ -255,7 +256,7 @@
 
   gap: 11px;
 
-  @media (min-width: $tablet-width) {
+  @media(min-width: $tablet-width) {
     width: 18px;
     height: 18px;
   }
