--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,5 +1,5 @@
 .main-nav {
-  @media (min-width: $desktop-width) {
+  @media(min-width: $desktop-width) {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
@@ -8,11 +8,14 @@
 
 .main-nav__list {
   position: absolute;
+  z-index: 2;
   top: 87px;
   left: 0;
 
   display: none;
-  width: fill-available;
+
+  width: -moz-available;
+  width: -webkit-fill-available;
   min-height: 215px;
   margin: 0;
   padding: 26px 0 31px;
@@ -21,14 +24,18 @@
 
   background-color: $color-navy-blue;
 
-  @media (min-width: $tablet-width) {
+  gap: 17.6px;
+
+  @media(min-width: $tablet-width) {
     top: 81px;
 
     min-height: 253px;
     padding: 30px 30px 44px;
+
+    gap: 23.6px;
   }
 
-  @media (min-width: $desktop-width) {
+  @media(min-width: $desktop-width) {
     position: static;
 
     display: flex;
@@ -39,6 +46,8 @@
     padding: 0;
     padding-bottom: 3px;
     padding-left: 58px;
+
+    gap: 0;
   }
 }
 
@@ -47,13 +56,9 @@
   flex-direction: column;
   flex-wrap: wrap;
 
-  @media (min-width: $desktop-width) {
+  @media(min-width: $desktop-width) {
     flex-direction: row;
   }
-}
-
-.main-nav__item {
-  margin-bottom: auto;
 }
 
 .main-nav__link {
@@ -69,7 +74,7 @@
 
   color: $color-default-white;
 
-  @media (min-width: $tablet-width) {
+  @media(min-width: $tablet-width) {
     font-size: $font-line-size-fox;
     line-height: $font-line-size-fox;
 
@@ -78,7 +83,7 @@
     letter-spacing: 0.64px;
   }
 
-  @media (min-width: $desktop-width) {
+  @media(min-width: $desktop-width) {
     font-weight: $regular;
 
     padding: 15px;
@@ -90,7 +95,7 @@
 
 .main-nav__item:nth-child(2n) {
   .main-nav__link {
-    @media (min-width: $desktop-width) {
+    @media(min-width: $desktop-width) {
       padding-left: 16px;
     }
   }
